# nebulav2

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  clippy.toml  deny.toml  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
crates/nebula-api/: Cargo.toml  README.md
crates/nebula-core/: Cargo.toml  README.md
crates/nebula-core/src/: lib.rs
crates/nebula-core/src/error/: backtrace.rs  context.rs  info.rs  traits.rs
crates/nebula-core/src/parameter/: collection.rs  kind.rs  mod.rs  options.rs  parameter.rs  validation.rs  value.rs
crates/nebula-core/src/validation/: builder.rs  integration.rs  mod.rs  operator.rs  preset.rs
crates/nebula-core/src/validation/error/: comparison.rs  emptiness.rs  mod.rs  regex.rs  set.rs  string.rs
crates/nebula-core/src/value/: array.rs  binary.rs  boolean.rs  datetime.rs  error.rs  group.rs  mod.rs  mode.rs  number.rs  object.rs  string.rs  value.rs
crates/nebula-derive/: Cargo.toml
crates/nebula-derive/src/: lib.rs  parameters.rs  utils.rs
crates/nebula-log/: Cargo.toml
crates/nebula-registry/: Cargo.toml  README.md
crates/nebula-runtime/: Cargo.toml  README.md
crates/nebula-storage/: Cargo.toml  README.md
crates/nebula-storage-postgres/: Cargo.toml  README.md
crates/nebula-template/: Cargo.toml  README.md
crates/nebula-template/src/: context.rs  error.rs  lib.rs  template.rs  value.rs
crates/nebula-template/src/functions/: mod.rs
crates/nebula-template/src/parser/: ast.rs
crates/nebula-ui/: Cargo.toml  README.md
crates/nebula-ui/src/: lib.rs  theme.rs
crates/nebula-value/: Cargo.toml
crates/nebula-value/src/: array.rs  binary.rs  boolean.rs  color.rs  comparison.rs  cron.rs  datetime.rs  duration.rs  error.rs  expression.rs  file.rs  group.rs  lib.rs  mode.rs  number.rs  object.rs  regex.rs  string.rs  value.rs
crates/nebula-value/src/types/: boolean.rs  datetime.rs  expression.rs  file.rs  mod.rs  mode.rs  object.rs  string.rs
crates/nebula-value/src/validation/: builder.rs  context.rs  mod.rs  operator.rs  presets.rs
crates/nebula-value/src/validation/errors/: conditional.rs  cross_field.rs  logical.rs  mod.rs  range.rs
crates/nebula-value/src/validation/impls/: comparison.rs  logincal.rs  mod.rs
crates/nebula-worker/: Cargo.toml  README.md
crates/nebula_core/: Cargo.toml
crates/nebula_core/src/: lib.rs
crates/nebula_core/src/error/: backtrace.rs  category.rs  context.rs  info.rs  macros.rs  mod.rs  severity.rs  traits.rs
crates/nebula_core/src/parameter/: collection.rs  display.rs  error.rs  kind.rs  metadata.rs  mod.rs  options.rs  parameter.rs  validation.rs  value.rs
crates/nebula_core/src/types/: key.rs  mod.rs
crates/nebula_core/src/value/: array.rs  binary.rs  boolean.rs  comparison.rs  datetime.rs  duration.rs  error.rs  expression.rs  group.rs  mod.rs  mode.rs  number.rs  object.rs  regex.rs  string.rs
crates/nebula_derive/: Cargo.toml
crates/nebula_derive/src/: lib.rs  parameters.rs  utils.rs
crates/nebula_ui/: Cargo.toml
crates/nebula_ui/examples/: text_parameter.rs
crates/nebula_ui/src/: context.rs  lib.rs  theme.rs
crates/nebula_ui/src/widget/: mod.rs  text.rs
