[workspace]
members = [
    "crates/nebula-core",
    "crates/nebula-derive",
    "crates/nebula-log",
    "crates/nebula-registry",
    "crates/nebula-runtime",
    "crates/nebula-storage",
    "crates/nebula-storage-postgres",
    "crates/nebula-api",
    "crates/nebula-worker",
    "crates/nebula-ui",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Nebula Team"]
edition = "2024"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/nebula"
homepage = "https://github.com/your-org/nebula"
documentation = "https://docs.rs/nebula"
readme = "README.md"
keywords = ["workflow", "automation", "orchestration", "pipeline", "dag"]
categories = ["development-tools", "asynchronous"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.45.1", features = ["sync", "time", "macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"

# Error handling - базовые для всех
thiserror = "2.0.12"
anyhow = "1.0.98"

# Logging
tracing = "0.1.41"

# Data structures
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }

# Utility
futures = "0.3.31"
bytes = "1.10"

# Testing
pretty_assertions = "1.4"
mockall = "0.13.0"
tempfile = "3.12"

[workspace.lints.rust]
# Rust compiler lints
unsafe_code = "warn"
unstable_features = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
# Pedantic lints
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"

# Restriction lints
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"
expect_used = "warn"

# Cargo lints
cargo_common_metadata = "warn"
negative_feature_names = "warn"
redundant_feature_names = "warn"
wildcard_dependencies = "warn"

# Style lints
needless_pass_by_value = "warn"
trivially_copy_pass_by_ref = "warn"
semicolon_if_nothing_returned = "warn"
match_same_arms = "warn"
single_match_else = "warn"
unnecessary_wraps = "warn"
redundant_else = "warn"
unused_async = "warn"
map_unwrap_or = "warn"
map_flatten = "warn"
filter_map_next = "warn"

# Performance lints
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
trivial_regex = "warn"
needless_collect = "warn"

# Correctness lints
derive_partial_eq_without_eq = "warn"
enum_glob_use = "warn"
exit = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
mem_forget = "warn"
panic = "warn"
panic_in_result_fn = "warn"
use_debug = "warn"

[workspace.lints.rustdoc]
all = "warn"
missing_doc_code_examples = "allow"
private_doc_tests = "warn"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1