[package]
name = "nebula_api"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["workflow", "api", "server", "rest"]
categories = ["web-programming::http-server"]
description = "API server for Nebula workflow engine"

[[bin]]
name = "nebula-server"
path = "src/main.rs"

[dependencies]
nebula-core = { path = "../nebula-core" }
nebula-runtime = { path = "../nebula-runtime" }
nebula-registry = { path = "../nebula-registry" }
nebula-storage = { path = "../nebula-storage" }
nebula-storage-postgres = { path = "../nebula-storage-postgres" }

# From workspace
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }

# Web framework
axum = { version = "0.7.7", features = ["ws", "multipart"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "compression-full"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration
config = { version = "0.14", default-features = false, features = ["toml"] }
dotenvy = "0.15"

# Optional
tracing = { workspace = true, optional = true }
nebula-log = { path = "../nebula-log", optional = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing", "nebula-log", "nebula-runtime/tracing"]

[dev-dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
wiremock = "0.6"