[package]
name = "nebula-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["workflow", "macro", "derive"]
categories = ["development-tools::procedural-macro-helpers"]
description = "Procedural macros for Nebula workflow engine"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
nebula-core = { path = "../nebula-core" }
serde = { workspace = true }
serde_json = { workspace = true }
trybuild = "1.0"