[package]
name = "nebula-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["workflow", "runtime", "engine", "execution"]
categories = ["asynchronous"]
description = "Workflow execution runtime for Nebula workflow engine"

[lib]
name = "nebula_runtime"
path = "src/lib.rs"

[dependencies]
nebula-core = { path = "../nebula-core" }
nebula-storage = { path = "../nebula-storage" }
nebula-registry = { path = "../nebula-registry" }

# From workspace
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Expression parsing
nom = "7.1"

# Data structures
indexmap = { version = "2.5", features = ["serde"] }
parking_lot = "0.12.3"
dashmap = "5.5"
once_cell = "1.20"
pin-project = "1.1"

# Optional
tracing = { workspace = true, optional = true }
nebula-log = { path = "../nebula-log", optional = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing", "nebula-log", "nebula-core/tracing", "nebula-storage/tracing"]

[dev-dependencies]
nebula-storage-postgres = { path = "../nebula-storage-postgres" }
pretty_assertions = { workspace = true }
mockall = { workspace = true }
criterion = "0.6.0"
proptest = "1.5"