[package]
name = "nebula-storage-postgres"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["workflow", "storage", "postgresql", "s3"]
categories = ["database"]
description = "PostgreSQL and S3 storage implementation for Nebula workflow engine"

[dependencies]
nebula-core = { path = "../nebula-core" }
nebula-storage = { path = "../nebula-storage" }

# From workspace
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Database specific
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
deadpool-postgres = "0.14.0"
postgres-types = { version = "0.2.8", features = ["derive"] }
refinery = { version = "0.8.14", features = ["tokio-postgres"] }

# S3 specific
aws-sdk-s3 = "1.52"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }

# Optional
tracing = { workspace = true, optional = true }

[features]
default = []
tracing = ["dep:tracing", "nebula-storage/tracing"]

[dev-dependencies]
tempfile = { workspace = true }
testcontainers = "0.16"