[package]
name = "nebula-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["workflow", "storage", "database"]
categories = ["database"]
description = "Storage abstractions for Nebula workflow engine"

[dependencies]
nebula-core = { path = "../nebula-core" }

# From workspace
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

# Optional
tracing = { workspace = true, optional = true }

[features]
default = []
tracing = ["dep:tracing", "nebula-core/tracing"]

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }