[package]
name = "nebula_derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
# Proc macro essentials
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# Error handling
thiserror = { workspace = true }

# For generating better error messagesда
proc-macro-error = "1.0"

[dev-dependencies]
# For testing macros
trybuild = "1.0"

[lints]
workspace = true